[tool.poetry]
name = "asuna-fastapi"
version = "0.1.0"
description = "The alternative version of the asuna.ga api."
authors = ["JDBot <jdjgbot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.114.0"
python-dotenv = ">=1.0.1"
uvicorn = ">=0.30.6"
asqlite = {git = "https://github.com/Rapptz/asqlite"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
